# qr-forge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DISTRIBUZIONE.md  HOMEBREW_SUBMISSION.md  LICENSE  PERSONAL_TAP.md  README.md  TESTING_REPORT.md  build_app.sh  build_app_old.sh  create_icon.sh  generate_icon.py  prepare_homebrew.sh  quick_test.sh  setup.sh  setup_personal_tap.sh  test_homebrew.sh
.github/: FUNDING.yml  REPOSITORY_INFO.md  repository.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/profile/: README.md
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: README.md  index.html
homebrew/: qr-forge.rb
src/: gui.rs  gui_main.rs  main.rs
